bug#5702 Check index version already in master to prevent "non-atmoic" failing drop index

ndb/src/kernel/blocks/dbdict/Dbdict.cpp:
  Check index version already in master
  to prevent "non-atmoic" failing drop index